[gd_scene load_steps=4 format=3 uid="uid://bglqjsb26ya01"]

[ext_resource type="PackedScene" uid="uid://pqelfdev78cp" path="res://scenes/Map/map.tscn" id="1_8qu14"]
[ext_resource type="Script" path="res://scenes/Run/run.gd" id="1_su7mb"]
[ext_resource type="Resource" uid="uid://diou60mjxujrh" path="res://scenes/StartGame/run_setup.tres" id="2_bqsas"]

[node name="Run" type="Node"]
script = ExtResource("1_su7mb")
run_setup = ExtResource("2_bqsas")

[node name="Map" parent="." instance=ExtResource("1_8qu14")]

[node name="CurrentView" type="Node" parent="."]

[node name="Debug" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -38.0
offset_right = 55.0
offset_bottom = 38.0
grow_vertical = 2

[node name="Campfire" type="Button" parent="Debug"]
custom_minimum_size = Vector2(32, 12)
layout_mode = 2
text = "campfire"

[node name="Shop" type="Button" parent="Debug"]
custom_minimum_size = Vector2(32, 12)
layout_mode = 2
text = "shop"

[node name="Battle" type="Button" parent="Debug"]
custom_minimum_size = Vector2(32, 12)
layout_mode = 2
text = "battle"

[node name="BattleReward" type="Button" parent="Debug"]
custom_minimum_size = Vector2(32, 12)
layout_mode = 2
text = "battle_reward"

[node name="TreasureRoom" type="Button" parent="Debug"]
custom_minimum_size = Vector2(32, 12)
layout_mode = 2
text = "treasure Room"

[node name="Map" type="Button" parent="Debug"]
custom_minimum_size = Vector2(32, 12)
layout_mode = 2
text = "Map"

[connection signal="pressed" from="Debug/Campfire" to="." method="_on_campfire_pressed"]
[connection signal="pressed" from="Debug/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Debug/Battle" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="Debug/BattleReward" to="." method="_on_battle_reward_pressed"]
[connection signal="pressed" from="Debug/TreasureRoom" to="." method="_on_treasure_room_pressed"]
[connection signal="pressed" from="Debug/Map" to="." method="_on_map_pressed"]
